# Lauen

./: .gitignore  ACKNOWLEDGEMENTS  CMakeLists.txt  README.md
automation/: run_valgrind.sh  valgrind-python.supp
config/: BuildConfiguration.cmake
docs/: Makefile
docs/source/: components.rst  conf.py  default_assets.rst  editor.rst  index.rst  inside_the_engine.rst  installation.rst  internal_engine.rst  introduction.rst  preprocessors.rst  scripting.rst  server.rst  standard_components.rst
src/: main.py  test_parser.py  test_server.py
src/editor/: CMakeLists.txt  index.html  lau_canvas.nmf
src/editor/canvas/: main.cpp
src/editor/development/: Gruntfile.js  bower.json  package.json
src/editor/development/app/: index.html
src/editor/development/app/scripts/: app.js  event.js  rpc.js  socket.js
src/editor/development/app/scripts/controllers/: main.js
src/editor/development/app/scripts/directives/: component_editor.js  edit_canvas.js  entity_editor.js  game_object_editor.js  game_object_hierarchy.js  hierarchy_level.js  menu_bar.js  mmenu.js  ngenter.js  numberinput.js  preview_canvas.js  project_panel.js  script_field.js
src/editor/development/app/scripts/directives/component_widgets/: colorinput.js  numberinput.js  stringinput.js  v2f.js  v3f.js  vector3.js
src/editor/development/app/scripts/lau/: component_prototypes.js  game_object.js  io.js  lau.js
src/editor/development/app/scripts/services/: component_manager.js  dragdrop_manager.js  edit_canvas_manager.js  editor_state_manager.js  game_object_manager.js  history_manager.js  lau_components.js  lau_game_object.js  lau_prefab.js  scene_manager.js
src/editor/development/app/shaders/: horizontal_plane.fs  horizontal_plane.vs
src/editor/development/app/styles/: layout.scss  main.scss  project_panel.scss  switcher.scss
src/editor/development/app/views/: main.html
src/editor/development/app/views/dialogs/: build.html
src/editor/development/app/views/directives/: entity_editor.html  game_object_editor.html  game_object_hierarchy.html  hierarchy_level.html  menu_bar.html  project_panel.html
src/editor/development/app/views/directives/component_editors/: camera_editor.html  light_editor.html  mesh_editor.html  mesh_renderer_editor.html  script_editor.html  skinned_mesh_renderer_editor.html  transform_editor.html  v2f.html  v3f.html  vector3.html
src/editor/development/app/views/directives/component_editors/script_fields/: float.html  int.html  v2f.html  v3f.html
src/engine/: CMakeLists.txt
src/engine/default_assets/: Component.cpp  Component.hpp  DrawableComponent.hpp  Factories.cpp  Factories.cpy  Factories.hpp  Factories.hpy  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  LauCommon.h  Peekers.cpp  Peekers.cpy  Peekers.hpp  main.cpp
src/engine/default_assets/default_components/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.hpp  Transform.cpp  Transform.hpp
src/engine/default_assets/default_components/primitive_meshes/: Cube.lmf  Plane.json  Plane.lmf
src/engine/default_assets/factories/: FactoryTemplates.cpy
src/engine/default_assets/math/: Math.hpp  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Vector.cpp  Vector.hpp
src/engine/default_assets/opengl/: ShaderProgram.cpp  ShaderProgram.hpp  VBO.cpp  VBO.h  VBO.hpp
src/engine/default_assets/shaders/: basic.fs  basic.vs  phong_interp_animated.vs  phong_interpolated_light.fs  phong_interpolated_light.vs
src/engine/default_assets/types/: Color.cpp  Color.hpp
src/engine/default_assets/utils/: Callback.hpp  IO.cpp  IO.h  ThreadPool.cpp  ThreadPool.hpp  Time.cpp  Time.h  UrlLoaderHandler.cpp  UrlLoaderHandler.h
src/engine/default_assets/window/: Browser.cpp  Browser.hpp  Desktop.cpp  Desktop.hpp  NaCl.cpp  NaCl.hpp  Screen.cpp  Screen.hpp  Window.cpp  Window.hpp
src/server/: Config.py  Event.py  HTTPRequestHandler.py  HTTPServer.py  RPC.py  WSServer.py  WebSocketServer.py  main.py
src/server/components/: DefaultComponentManager.py
src/server/io/: FolderWatcher.py  IOEventHandler.py  Utils.py
src/server/parser/: CppParser.py  Parser.cpp  Parser.h
src/server/project/: AssetFolderWatcher.py  AssetProcessor.py  Project.py  ProjectEventHandler.py
src/template_project/: project.json
src/utils/: IO.cpp  IO.h
